--- a/homework6_17.Web/homework6_17.Web.csproj
+++ b/homework6_17.Web/homework6_17.Web.csproj
@@ -10,10 +10,13 @@
     <SpaProxyServerUrl>http://localhost:3000</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm run dev</SpaProxyLaunchCommand>
     <ImplicitUsings>enable</ImplicitUsings>
+	  <PreserveCompilationContext>true</PreserveCompilationContext>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.17" />
+    <PackageReference Include="PuppeteerSharp" Version="18.0.3" />
+    <PackageReference Include="RazorLight" Version="2.3.1" />
   </ItemGroup>
   
 <ItemGroup>
